--- a/presentation_CV.html
+++ b/presentation_CV.html
@@ -27,3 +27,13 @@ background-color: lightyellow;
 
 </head>
 
+<ol> 1. premier point </ol>
+
+<li> rubrique 1 </li>
+<li> rubrique 2 </li>
+
+<ol> 2. 2e point</ol>
+<ol> 3e point </ol>
+
+<li> rubrique 1 </li>
+<li> rubrique 2 </li>
