--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ background-color: lightyellow;
 </table>
 <footer>
 	<div id="p1">
-	Auteur : Gino Rocca | Formation Intégrateur Web | Copyright : 2022
+	<center> Auteur : Gino Rocca | Formation Intégrateur Web | Copyright : 2022 </center>
 	</div>
 	</footer>	
 	
