--- a/presentation_CV.html
+++ b/presentation_CV.html
@@ -34,3 +34,9 @@ background-color: lightyellow;
 <ol> 3. 3e point </ol>
 <li> rubrique 1 </li>
 <li> rubrique 2 </li>
+
+<footer>
+	<div id="p1">
+	<center> Auteur : Gino Rocca | Formation Intégrateur Web | Copyright : 2022 </center
+	</div>
+	</footer>	
