--- a/presentation_CV.html
+++ b/presentation_CV.html
@@ -27,11 +27,11 @@ background-color: lightyellow;
 
 </head>
 
-<ol> 1. premier point </ol>
+<p> 1. premier point </p>
 <li> rubrique 1 </li>
 <li> rubrique 2 </li>
-<ol> 2. 2e point</ol>
-<ol> 3. 3e point </ol>
+<p> 2. 2e point</p>
+<p> 3. 3e point </p>
 <li> rubrique 1 </li>
 <li> rubrique 2 </li>
 
