--- a/presentation_CV.html
+++ b/presentation_CV.html
@@ -13,7 +13,7 @@
 
 <li><a href="index.html">Accueil</a>
 <li><a href="presentation_CV.html">Présentation de mon CV</a>
-
+<li><a href="contact.html">Contact</a>
 </nav>
 
 <style> 
