--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@ background-color: lightyellow;
 
 <li><a href="index.html">Accueil</a>
 <li><a href="presentation_CV.html">Présentation de mon CV</a>
-
+<li><a href="contact.html">Contact</a>
+	
 </nav>
 
 </header>
